--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,7 @@
 })
 
 <body>
-	@@include("html/header.html", {})
-	<main>
-		@@include("html/main_new_project.html", {})
-	</main>
-	@@include("html/footer.html", {})
+	@@include("html/main.html", {})
 	@@include("html/scripts.html", {})
 </body>
 
