--- a/src/html/main.html
+++ b/src/html/main.html
@@ -91,4 +91,4 @@
 		</div>
 	</footer>
 </div>
-<input type="hidden" name="animate" value="1">
+<input id="helper" type="hidden" name="animate" value="1">
