Work comp build

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -13,7 +13,7 @@
 					ДО ВОЗВРАЩЕНИЕ ХЕРСОНА
 				</div>
 			</div> -->
-			<!-- <div class="main__slide" data-animation="top-bottom" data-slide="2">
+			<div class="main__slide" data-animation="top-bottom" data-slide="2">
 				<div class="main__image">
 					<img src="@img/image-3.png" alt="War">
 				</div>
@@ -38,8 +38,8 @@
 				<div class="main__title-author title">
 					(А. Амальрик, писатель, диссидент)
 				</div>
-			</div> -->
-			<div class="main__slide" data-animation="top" data-slide="3">
+			</div>
+			<!-- <div class="main__slide" data-animation="top" data-slide="3">
 				<div class="main__image">
 					<img src="@img/image-3.png" alt="War">
 				</div>
@@ -55,7 +55,7 @@
 					становили небезпеку
 					як для військових, так і для мирного населення.
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 	</main>
