--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,61 +1,67 @@
 <div class="wrapper">
 	<main class="main">
 		<div class="main__slides">
-			<!-- <div class="main__slide" data-animation="left-right" data-slide="1">
-				<div class="main__image">
-					<img src="@img/image-1.png" alt="War">
-				</div>
-				<div class="main__title-top title">
-					ОТ «КИЕВ ЗА 3 ДНЯ»
-				</div>
-				<div class="main__hr"></div>
-				<div class="main__title-bottom title">
-					ДО ВОЗВРАЩЕНИЕ ХЕРСОНА
-				</div>
-			</div> -->
-			<div class="main__slide" data-animation="top-bottom" data-slide="2">
-				<div class="main__image">
-					<img src="@img/image-3.png" alt="War">
-				</div>
-				<div class="main__title-date title">
-					XXI
-				</div>
-				<div class="main__title-big title">
-					ОТ «КИЕВ ЗА 3 ДНЯ» <br>
-					ДО УНИЧТОЖЕНИЯ армии россии
-				</div>
-				<div class="main__title-quote title">
-					<svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M13 2L4 13L13 24" stroke="#D6D4CB" stroke-width="5" />
-						<path d="M25 2L16 13L25 24" stroke="#D6D4CB" stroke-width="5" />
-					</svg>
-					россия — страна без веры, без традиций, без культуры и умения работать.
-					<svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M2 24L11 13L2 2" stroke="#D6D4CB" stroke-width="5" />
-						<path d="M14 24L23 13L14 2" stroke="#D6D4CB" stroke-width="5" />
-					</svg>
-				</div>
-				<div class="main__title-author title">
-					(А. Амальрик, писатель, диссидент)
+			<div class="main__slide main__slide--current" data-animation="left_right" data-slide="1">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-1.png" alt="War">
+					</div>
+					<div class="main__title-top title">
+						ОТ «КИЕВ ЗА 3 ДНЯ»
+					</div>
+					<div class="main__hr"></div>
+					<div class="main__title-bottom title">
+						ДО ВОЗВРАЩЕНИЕ ХЕРСОНА
+					</div>
 				</div>
 			</div>
-			<!-- <div class="main__slide" data-animation="top" data-slide="3">
-				<div class="main__image">
-					<img src="@img/image-3.png" alt="War">
+			<div class="main__slide" data-animation="top_bottom" data-slide="2">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-2.png" alt="War">
+					</div>
+					<div class="main__title-date title">
+						XXI
+					</div>
+					<div class="main__title-big title">
+						ОТ «КИЕВ ЗА 3 ДНЯ» <br>
+						ДО УНИЧТОЖЕНИЯ армии россии
+					</div>
+					<div class="main__title-quote title">
+						<svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M13 2L4 13L13 24" stroke="#D6D4CB" stroke-width="5" />
+							<path d="M25 2L16 13L25 24" stroke="#D6D4CB" stroke-width="5" />
+						</svg>
+						россия — страна без веры, без традиций, без культуры и умения работать.
+						<svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M2 24L11 13L2 2" stroke="#D6D4CB" stroke-width="5" />
+							<path d="M14 24L23 13L14 2" stroke="#D6D4CB" stroke-width="5" />
+						</svg>
+					</div>
+					<div class="main__title-author title">
+						(А. Амальрик, писатель, диссидент)
+					</div>
 				</div>
-				<div class="main__title-border title">
-					Освобождение Херсона
+			</div>
+			<div class="main__slide" data-animation="top" data-slide="3">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-3.png" alt="War">
+					</div>
+					<div class="main__title-border title">
+						Освобождение Херсона
+					</div>
+					<div class="main__title-text title">
+						Збройні сили України увійшли в місто 11 листопада. Того ж дня українські війська звільнили Херсон та
+						решту правобережжя
+						Херсонської області. Існували певні побоювання, що російські сили могли влаштувати пастку, тому ЗСУ
+						просувалися з деякою
+						обережністю. Як і на інших звільнених територіях, прибулі українці виявили міни та мін-пастки, які
+						становили небезпеку
+						як для військових, так і для мирного населення.
+					</div>
 				</div>
-				<div class="main__title-text title">
-					Збройні сили України увійшли в місто 11 листопада. Того ж дня українські війська звільнили Херсон та
-					решту правобережжя
-					Херсонської області. Існували певні побоювання, що російські сили могли влаштувати пастку, тому ЗСУ
-					просувалися з деякою
-					обережністю. Як і на інших звільнених територіях, прибулі українці виявили міни та мін-пастки, які
-					становили небезпеку
-					як для військових, так і для мирного населення.
-				</div>
-			</div> -->
+			</div>
 		</div>
 
 	</main>
