--- a/src/html/main.html
+++ b/src/html/main.html
@@ -15,10 +15,38 @@
 					</div>
 				</div>
 			</div>
-			<div class="main__slide" data-animation="top_bottom" data-slide="2">
+			<div class="main__slide" data-animation="left_right" data-slide="2">
 				<div class="main__slide-container">
 					<div class="main__image">
 						<img src="@img/image-2.png" alt="War">
+					</div>
+					<div class="main__title-top title">
+						ЖЕРТВЫ, АГРЕССИЯ
+					</div>
+					<div class="main__hr"></div>
+					<div class="main__title-bottom title">
+						ГЕНОЦИД НАШЕЙ НАЦИИ
+					</div>
+				</div>
+			</div>
+			<div class="main__slide" data-animation="left_right" data-slide="3">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-22.png" alt="War">
+					</div>
+					<div class="main__title-top title">
+						УНИЖЕНИЕ И УНИЧТОЖЕНИЕ
+					</div>
+					<div class="main__hr"></div>
+					<div class="main__title-bottom title">
+						«ВТОРОЙ» АРМИИ МИРА
+					</div>
+				</div>
+			</div>
+			<div class="main__slide" data-animation="top_bottom" data-slide="4">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-3.png" alt="War">
 					</div>
 					<div class="main__title-date title">
 						XXI
@@ -43,10 +71,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="main__slide" data-animation="top" data-slide="3">
+			<div class="main__slide" data-animation="top" data-slide="5">
 				<div class="main__slide-container">
 					<div class="main__image">
-						<img src="@img/image-3.png" alt="War">
+						<img src="@img/image-4.png" alt="War">
 					</div>
 					<div class="main__title-border title">
 						Освобождение Херсона
@@ -62,10 +90,104 @@
 					</div>
 				</div>
 			</div>
+			<div class="main__slide" data-animation="top" data-slide="6">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-5.png" alt="War">
+					</div>
+					<div class="main__title-border title">
+						Освобождение Херсона
+					</div>
+					<div class="main__title-text title">
+						11 листопада українські військові працювали над їх розмінуванням, але від таких пристроїв було
+						поранено кількох людей,
+						щонайменше один загинув. Коли ЗСУ рухалися до міста, жодних засідок, схоже, не було підготовлено.
+					</div>
+				</div>
+			</div>
+			<div class="main__slide" data-animation="top" data-slide="7">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-6.png" alt="War">
+					</div>
+					<div class="main__title-border title">
+						Геноцид украинцев
+					</div>
+					<div class="main__title-text title">
+						Постійне бомбардування житлових масивів і людей, а особливо медичних, культурних та інших закладів,
+						які не мають жодного
+						відношення до влади чи військових об'єктів. Найбільш кричущим є напад на дитячу лікарню.
+					</div>
+				</div>
+			</div>
+			<div class="main__slide" data-animation="top" data-slide="8">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-7.png" alt="War">
+					</div>
+					<div class="main__title-border title">
+						Геноцид украинцев
+					</div>
+					<div class="main__title-text title">
+						Тут навіть російська пропаганда суперечила собі, коли спочатку говорила, що це фейк і його взагалі не
+						існує, а потім
+						говорила, що там нібито розташований штаб батальйону, праворадикалів і «нацистів».
+					</div>
+				</div>
+			</div>
+			<div class="main__slide" data-animation="top" data-slide="9">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-8.png" alt="War">
+					</div>
+					<div class="main__title-border title">
+						Уничтожение вс рф
+					</div>
+					<div class="main__title-text title">
+						россия больше не является государством, способным составить равноправную конкуренцию западному миру с
+						военно-технической
+						точки зрения. По мнению Рупшса, Путина ввели в заблуждение о реальном состоянии российских вооруженных
+						сил, поэтому
+						Путин вообразил, что российские вс — лучшие в мире.
+					</div>
+				</div>
+			</div>
+			<div class="main__slide" data-animation="top" data-slide="10">
+				<div class="main__slide-container">
+					<div class="main__image">
+						<img src="@img/image-9.png" alt="War">
+					</div>
+					<div class="main__title-border title">
+						Уничтожение вс рф
+					</div>
+					<div class="main__title-text title">
+						Рупшис также раскритиковал попытку российских войск вести вторжение сразу на восьми направлениях,
+						указав на то, что
+						российские войска недостаточно обучены, оснащены и слажены для военных операций такого масштаба.
+						Россия войну в Украине
+						уже проиграла
+					</div>
+				</div>
+			</div>
 		</div>
 
 	</main>
 	<footer class="footer">
+		<div class="footer__nav">
+			<div class="footer__list">
+				<div class="footer__item">
+					от «КИЕВ ЗА 3 ДНЯ» до возвращение Херсона
+				</div>
+				<div class="footer__item">
+					ЖЕРТВЫ, АГРЕССИЯ, ГЕНОЦИД НАШЕЙ НАЦИИ
+				</div>
+				<div class="footer__item">
+					УНИЧТОЖЕНИЕ вс рф
+				</div>
+				<div class="footer__loader">
+				</div>
+			</div>
+		</div>
 		<div class="footer__info">
 			<div class="info__logo">
 				<div class="info__projects">
