--- a/src/html/main.html
+++ b/src/html/main.html
@@ -175,14 +175,35 @@
 	<footer class="footer">
 		<div class="footer__nav">
 			<div class="footer__list">
-				<div class="footer__item">
-					от «КИЕВ ЗА 3 ДНЯ» до возвращение Херсона
+				<div class="footer__item" data-slide="1">
+					«КИЕВ ЗА 3 ДНЯ»
 				</div>
-				<div class="footer__item">
-					ЖЕРТВЫ, АГРЕССИЯ, ГЕНОЦИД НАШЕЙ НАЦИИ
+				<div class="footer__item" data-slide="2">
+					«КИЕВ ЗА 3 ДНЯ»
 				</div>
-				<div class="footer__item">
-					УНИЧТОЖЕНИЕ вс рф
+				<div class="footer__item" data-slide="3">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="4">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="5">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="6">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="7">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="8">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="9">
+					«КИЕВ ЗА 3 ДНЯ»
+				</div>
+				<div class="footer__item" data-slide="10">
+					«КИЕВ ЗА 3 ДНЯ»
 				</div>
 				<div class="footer__loader">
 				</div>
@@ -212,11 +233,19 @@
 				<div class="info__icon info__icon-border">
 					<a href="">RU</a>
 				</div>
-				<div class="info__icon info__icon-border">
-					<a href=""><img src="@img/ph-music-notes.svg" alt=""></a>
+				<div class="info__icon info__icon-border info__icon-sound mute">
+					<button id="volume" class="hidden__button"></button>
+				</div>
+			</div>
+			<div class="footer__burger">
+				<div id="nav-icon4">
+					<span></span>
+					<span></span>
+					<span></span>
 				</div>
 			</div>
 		</div>
+
 	</footer>
 </div>
 <input id="helper" type="hidden" name="animate" value="1">
